--- a/Connected_Health_App/app/src/main/res/layout/activity_measurement_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_measurement_view.xml
@@ -4,15 +4,27 @@
     android:layout_height="match_parent"
     tools:context="au.edu.adelaide.connected_health_app.MeasurementViewActivity"
     android:orientation="vertical"
-    android:background="#ff44fffa">
+    android:background="@android:color/holo_green_light">
 
     <include layout="@layout/quick_menu_bar"
         android:id="@+id/quickMenuBar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
+        <!--Title-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Measurement: Steps"
+            android:id="@+id/measurementHeading"
+            android:autoText="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <!--Home Button-->
         <include layout="@layout/home_button"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -21,23 +33,78 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Measurement"
-            android:id="@+id/measurementHeading"
-            android:autoText="false"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <WebView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/webviewGraphTest"
-            android:layout_below="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <!--Measurement Info -->
+        <TextView
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Measurement date: 7 Mar, 17:13\n\nYour blood pressure is outside the limits that were set for you by your doctor.\nImportant:\n\nBetween 1pm and 8pm Monday - Friday the blood pressure readings will be monitored by a registered nurse who will phone you with instructions.If you have entered the blood pressure reading outside of these times, please review the information guide."
+            android:id="@+id/textView4"
+            android:textColor="@android:color/primary_text_dark"
+            android:background="@android:color/holo_blue_light"
+            android:layout_margin="20dp" />
+
+        <!--Measurement Graph-->
+        <WebView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/webviewGraphTest"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="20dp" />
+
+
+    </LinearLayout>
+
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--<include layout="@layout/home_button"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:id="@+id/homeButton"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentEnd="true" />-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+            <!--android:text="Measurement"-->
+            <!--android:id="@+id/measurementHeading"-->
+            <!--android:autoText="false"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true" />-->
+
+    <!--</RelativeLayout>-->
+
+<!--</LinearLayout>-->
