--- a/Connected_Health_App/app/src/main/res/layout/generic_preview_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_preview_view.xml
@@ -18,7 +18,8 @@
             android:layout_weight="0.8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp">
 
             <RelativeLayout
                 android:onClick="goToSingleItemView"
@@ -86,7 +87,8 @@
             android:layout_weight="0.2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp">
 
             <RelativeLayout
                 android:layout_weight="1"
