--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -30,8 +30,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_large_material"
-            android:id="@+id/profile_content" />
+            android:textSize="26sp"
+            android:id="@+id/profile_content"
+            android:letterSpacing="5" />
 
         <Button
             android:layout_width="wrap_content"
