--- a/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/generic_single_object_4buttons_view.xml
@@ -53,13 +53,33 @@
                 android:layout_weight="0.25"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/nav_layout1" />
+                android:id="@+id/nav_layout1" >
+
+                <Button
+                    android:onClick="goToEditItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Edit"
+                    android:id="@+id/button5"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_weight="0.25"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/nav_layout2" />
+                android:id="@+id/nav_layout2" >
+
+                <Button
+                    android:onClick="goToDeleteItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Delete"
+                    android:id="@+id/button_delete"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_weight="0.25"
