--- a/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
@@ -1,51 +1,61 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="au.edu.adelaide.connected_health_app.InformationViewActivity"
     android:orientation="vertical">
 
+    <!--Quick Menu Bar-->
     <include layout="@layout/quick_menu_bar"
         android:id="@+id/quickMenuBar"/>
 
+    <!--Padding-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/darker_gray">
 
-        <include layout="@layout/home_button"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/homeButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+        <!--Content-->
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@android:color/white">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/info_title"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:autoText="false"
-            android:id="@+id/infoHeading"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/info_title"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:autoText="false"
+                android:id="@+id/infoHeading"/>
 
-        <!--Resource links-->
-        <TextView
-            android:id="@+id/infoLink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/infoHeading"
-            android:layout_marginTop="20dp"
-            android:text="@string/info_link"/>
+            <!--Resource links-->
+            <TextView
+                android:id="@+id/infoLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/infoHeading"
+                android:layout_marginTop="20dp"
+                android:text="@string/info_link"/>
 
-        <WebView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/webviewYoutubeVid"
-            android:layout_below="@+id/infoLink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/webviewYoutubeVid"
+                android:layout_below="@+id/infoLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
