--- a/Connected_Health_App/app/src/main/res/layout/activity_journal_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_journal_view.xml
@@ -6,6 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="au.edu.adelaide.connected_health_app.JournalViewActivity">
 
+    <include layout="@layout/quick_menu_bar"
+        android:id="@+id/quickMenuBar"/>
 
 <!--
     <TextView
@@ -25,15 +27,15 @@
         android:layout_alignParentStart="true" />
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/journal_entry_new"
         android:layout_marginRight="11dp"
         android:layout_marginEnd="11dp"
         android:id="@+id/staticJournalEntryLayout"></RelativeLayout>
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/staticJournalEntryLayout"
         android:layout_marginRight="11dp"
         android:layout_marginEnd="11dp"
