--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -1,48 +1,81 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="au.edu.adelaide.connected_health_app.ProfileViewActivity"
     android:orientation="vertical">
 
+    <!--Quick Menu Bar-->
     <include layout="@layout/quick_menu_bar"
         android:id="@+id/quickMenuBar"/>
 
+    <!--Padding-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@android:color/darker_gray">
 
-        <include layout="@layout/home_button"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/homeButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+        <!--Content-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white">
 
-        <!--PROFILE VALUES
-        1. first name
-        2. last name
-        3. address
-        4. phone number
-        5. email -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26sp"
+                android:id="@+id/profile_content"
+                android:letterSpacing="5" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:id="@+id/profile_content"
-            android:letterSpacing="5" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:id="@+id/profile_edit"
+                android:onClick="goToProfileEdit"
+                android:layout_below="@+id/profile_content"
+                android:layout_toRightOf="@+id/profile_content"
+                android:layout_toEndOf="@+id/profile_content" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit"
-            android:id="@+id/profile_edit"
-            android:onClick="goToProfileEdit"
-            android:layout_below="@+id/profile_content"
-            android:layout_toRightOf="@+id/profile_content"
-            android:layout_toEndOf="@+id/profile_content" />
+        </RelativeLayout>
+        <!--End of Content-->
+
     </RelativeLayout>
-
 </LinearLayout>
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--&lt;!&ndash;PROFILE VALUES-->
+        <!--1. first name-->
+        <!--2. last name-->
+        <!--3. address-->
+        <!--4. phone number-->
+        <!--5. email &ndash;&gt;-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="26sp"-->
+            <!--android:id="@+id/profile_content"-->
+            <!--android:letterSpacing="5" />-->
+
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Edit"-->
+            <!--android:id="@+id/profile_edit"-->
+            <!--android:onClick="goToProfileEdit"-->
+            <!--android:layout_below="@+id/profile_content"-->
+            <!--android:layout_toRightOf="@+id/profile_content"-->
+            <!--android:layout_toEndOf="@+id/profile_content" />-->
+    <!--</RelativeLayout>-->
+
+<!--</LinearLayout>-->
