--- a/Connected_Health_App/app/src/main/res/layout/activity_questionnaire_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_questionnaire_view.xml
@@ -1,6 +1,6 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,14 +16,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <include layout="@layout/home_button"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:id="@+id/homeButton"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
 
             <!--QUESTIONNAIRE QUESTIONS-->
             <!-- 1. How was your sleep last night? A.Good B. Average C. Terrible -->
@@ -211,8 +203,8 @@
                 android:layout_alignParentStart="true" />
 
             <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/q4c"
                 android:layout_toLeftOf="@+id/homeButton"
                 android:id="@+id/questionnaire_layout"></RelativeLayout>
